Fix overflow in explore

--- a/src/app/explore/explore.component.css
+++ b/src/app/explore/explore.component.css
@@ -13,7 +13,7 @@
 }
 
 .section-main {
-    width: 100%;
+    width: 96%;
     margin-left: 4%;
 }
 
